	- TODO: fix extensions installation!

2009-10-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m2-1 :
	- new snapshot = 3.2.0 BETA


2009-10-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m1-1 :
	- first beta pkg for 3.2.0 series branched from DEV300_m60
	- adopt all changes that went into the devel pkg
	- pkg split to provide also the OOo sdk
	
2009-08-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m17-1 :
	- new snapshot
	- backup sofficerc file to fix
	  http://bugs.archlinux.org/task/15161
	- move all files to /usr/lib
	- add startcenter menu entry, drop templates entry	

2009-07-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m15-1 :
	new snapshot
	rebuild with lowered compiler optimizations
	http://bugs.archlinux.org/task/15290

2009-07-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m14-2 :
        rebuild for new xulrunner, added buildfix                

2009-06-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m14-1 :
        next snapshot
	
2009-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m13-1 :
        next snapshot

2009-06-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m12-1 :
        next snapshot
	- build for icu 4.2
	- add gcc4.4 fix
	- add glibc 2.10.1 fix

2009-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0-ooo310_m9-1 :
        next snapshot
	=RC1

openoffice-base-beta 3.1.0-ooo310_m8-1
- next snapshot

openoffice-base-beta 3.1.0-ooo310_m7-1
- next snapshot
- add libxtst dep

openoffice-base-beta 3.1.0-ooo310_m6-1
- next snapshot

openoffice-base-beta 3.1.0-ooo310_m5-1
- next snapshot
- add dep on desktop-file-utils
- add note about ttf pkg

openoffice-base-beta 3.1.0-ooo310_m4-1
- next snapshot

openoffice-base-beta 3.1.0-ooo310_m3-1
- next snapshot on the way to 3.1

openoffice-base-beta 3.1.0-ooo310_m2-1
- next snapshot on the way to 3.1
