@@ -3,7 +3,7 @@ post_install() {
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 update-desktop-database -q
 
-echo " * relogin or source /etc/profile.d/openoffice-beta.sh"
+echo " * check /etc/profile.d/openoffice-beta.sh, then relogin or \"source\" the file"
 echo " * see http://wiki.archlinux.org/index.php/Openoffice"
 echo "   how to use extensions, e.g. for spell checking"
 echo "   see /usr/lib/openoffice-beta/share/extension/install what"
